# test_math_library

projects/math_library/: CMakeLists.txt
projects/math_library/code/: main.cc  mat4.h  util.h  vec3.h  vec4.h
